--- a/symfony/translations/messages.en.yaml
+++ b/symfony/translations/messages.en.yaml
@@ -11,3 +11,22 @@ Description: Description
 'Télécharger le fichier': 'Download'
 'GnuVario-E - Mises à jour et ressources': 'GnuVario-E - Update and resources'
 'Autres fichiers disponibles': 'Other files'
+"Boitier 3D 2.90'' portrait": '2.9’’ portrait mode 3D case'
+"Fichiers permettant de fabriquer le boitier du Gnuvario-E avec écran 2.90'' en mode portrait": 'Files used to make the Gnuvario-E case with 2.90’’ screen in portrait mode'
+"Boitier 3D 2.90'' paysage": '2.90’’ landscape 3D case'
+"Fichiers permettant de fabriquer le boitier du Gnuvario-E avec écran 2.90'' en mode paysage": 'Files used to make the Gnuvario-E case with 2.90’’ screen in landscape mode'
+"Boitier 3D 1.54''": '1.54" 3D case'
+"Fichiers permettant de fabriquer le boitier du Gnuvario-E avec écran 1.54''": 'Files used to make the Gnuvario-E case with 1.54’’'
+'Fichiers GERBER': "Gerber's files"
+'Fichier permettant de faire fabriquer le PCB': 'Files needed to make your own PCB'
+'Projet KiCad': 'KiCad files'
+'Fichiers de conception du PCB avec KiCad': 'Kicad PCB files'
+'RootSD pour firmware Beta': 'RootSD for Beta firmware'
+'Dossier carte SD pour firmware Stable': 'RootSD folder for Beta firmware'
+'RootSD pour firmware Stable': 'RootSD for stable firmware'
+'Fiche de présentation': 'GNUVario-E summary'
+'Fichier Pdf de présentation du Gnuvario-E': 'GNUVario-E summary pdf file'
+'Fichier variocal.cfg vide': 'Fichier variocal.cfg empty'
+'Fichier variocal.cfg nécessaire pour procéder à la phase de calibration du vario ou pour annuler une calibration': 'Variocal.cfg file required to perform the vario calibration phase or to cancel a calibration'
+'Python Calibration V1.0': 'Python Calibration V1.0'
+'Code Python permettant de calculer des paramètres de calibration des accéléromètres': 'Python code for calculating accelerometer calibration parameters'
